--- a/landingpage/src/TimeSlot.css
+++ b/landingpage/src/TimeSlot.css
@@ -21,3 +21,13 @@
     background-color: #ffccaa; /* Orange background for 'urgent' status */
   }
   
+
+  /* Your mobile-specific styles go here */
+@media only screen and (max-width: 600px) {
+  /* Styles for devices with a maximum width of 600 pixels (e.g., mobile phones) */
+  body {
+    font-size: 14px;
+  }
+
+  /* Add more mobile-specific styles as needed */
+}
